tools/architecture/validate-source-imports/tests/fixtures/invalid/unresolved-relative-import/src/index.ts
import { helper } from "./missing-module";
export const value = helper();
